added GetTransactions endpoint
